BW-90 Fix z-index issue with fields (#1668)
https://carecru.atlassian.net/browse/BW-90

--- a/client/components/WidgetV2/Booking/styles.scss
+++ b/client/components/WidgetV2/Booking/styles.scss
@@ -59,6 +59,10 @@
   }
 }
 
+.elementWrapper {
+  width: 100%;
+}
+
 .subCard {
   @extend .content;
   flex-wrap: wrap;
